--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "prestart": "cp ./node_modules/react/umd/react.development.js dist/react.development.js && cp ./node_modules/react-dom/umd/react-dom.development.js dist/react-dom.development.js",
     "start": "webpack-dev-server --config ./webpack.config.js --mode development",
     "prettier": "prettier 'src/**/*.{ts,tsx}'",
     "prettier:ci": "npm run prettier -- -l",
@@ -22,12 +21,14 @@
     "@types/chai": "^4.1.5",
     "@types/enzyme": "^3.1.13",
     "@types/jest": "^23.3.2",
+    "adal-angular": "^1.0.17",
     "awesome-typescript-loader": "^5.2.1",
     "chai": "^4.1.2",
     "css-loader": "^1.0.0",
     "enzyme": "^3.6.0",
     "enzyme-adapter-react-16": "^1.0.0",
     "jest": "^23.6.0",
+    "modular-adal-angular": "^2.0.0",
     "node-sass": "^4.9.3",
     "prettier": "^1.14.2",
     "react-test-renderer": "^16.5.0",
@@ -51,7 +52,6 @@
     "@types/react": "^16.4.13",
     "@types/react-dom": "^16.0.7",
     "@types/reactstrap": "^6.0.3",
-    "adal-angular": "^1.0.17",
     "bootstrap": "^4.1.1",
     "expose-loader": "^0.7.5",
     "file-loader": "^2.0.0",
